Fix local volume access for prod version
- Ao fazer o EP3 eu percebi que a versão prod não tinha acesso aos
arquivos locais. Então não era possível acessar e criar os arquivos de
Leaderboard.json e Scoreboard.json. Então foi adicionado um volume no
arquivo docker-compose.yml, que referencia os arquivos locais,
e um usuário de baixa prioridade no Dockerfile para evitar conflito com
os outros profiles nos arquivos Scoreboard.json e Leaderboard.json.

- O Dockerfile, na versão prod executava o arquivo galaxy-raiders.jar
com o diretório errado, então isso foi consertado no Dockerfile também.

Signed-off-by: André Gustavo Nakagomi Lopez <andregnl@usp.br>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: .
       target: "runner"
+    volumes:
+      - "./:/home/gradle/galaxy-raiders/"
     ports:
       - "5000:5000"
     profiles:
